[metadata]
name = lpn_pytorch
version = attr: lpn_pytorch.__version__
author = "Dominic Wong"
author_email = dominicwong999@gmail.com
description = "Lightweight pose network implementation with pytorch backend"
url = https://github.com/dominic4810/lpn-pytorch
license = MIT

[options]
packages = find_namespace:
install_requires =
  torch >= 1.7.0
  typing_extensions >= 4.2
  yacs >= 0.1.8
python_requires = >=3.8

[options.packages.find]
include = lpn_pytorch.*
