[metadata]
name = posenet_pytorch
version = attr: posenet_pytorch.__version__
author = "Dominic Wong"
author_email = dominicwong999@gmail.com
description = "Pose networks implementation with pytorch backend"
url = https://github.com/dominic4810/lpn-pytorch
license = MIT

[options]
packages = find_namespace:
install_requires =
  torch >= 1.7.0
  typing_extensions >= 4.2
  yacs >= 0.1.8
python_requires = >=3.8

[options.packages.find]
include = posenet_pytorch.*
